--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Bootstrap-Flask==1.8.0
 click==8.0.1
 colorama==0.4.4
 Flask==2.0.1
+Flask-Login==0.5.0
 Flask-Moment==1.0.2
 Flask-SQLAlchemy==2.5.1
 Flask-WTF==0.15.1
